--- a/To-do-list.html
+++ b/To-do-list.html
@@ -7,27 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
-    <style>
-        body{
-            width: 100vw;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: #469FBC;
-            color: #ffffff;
-            margin-left: 5vw;
-            margin-right: 5vw;
-            width: 90vw;
-            height: 100vh;
-        }
-    </style>
+    <script src="main.js"></script>
 </head>
 
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="head">To-Do List</div>
+        <div class="getInput">
+            <input type="text" name="todo" id="todo">
+            <button> ADD </button>
+        </div>
+        
+
+    </div>
 
 </body>
 
